--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Site de Teste
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title> Site de Teste </title>
+</head>
+<body>
+</body>
+</html>
