--- a/Port/index.html
+++ b/Port/index.html
@@ -14,7 +14,7 @@
 <header>
     <div id="cabecalho">
         <div id="titulo">
-            <h1>Rafael Castanheira</h1>
+            <h1>Rafael Castanheira / Phillipe Spindula</h1>
             <h4>Web Developer</h4>
         </div>
         <nav>
