--- a/projects.html
+++ b/projects.html
@@ -11,15 +11,15 @@
     <header>
         <div id="cabecalho">
             <div id="titulo">
-                <h1>Rafael Castanheira</h1>
+                <h1>Rafael Castanheira / Phillipe Spindula</h1>
                 <h4>Web Developer</h4>
             </div>
             <nav>
                 <div id="menu">
                     <ul >
-                        <li><a href="index.html"><b>Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="resume.html">Resume</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="#">Contact</b></a></li>
                     </ul>
                 </div>
@@ -30,26 +30,44 @@
 
 
 <article id="principal">
-    <div id="resume">
+
         <h1><strong>LATEST PROJECTS</strong></h1>
         <hr>
-        <div id="work-experience">
+        <div class="work-experience"><a href="jogoForca/index.html" target="_blank" >
             <div class="ciclo-project">
-                <span id="ciclo-work-experience1">Project1</span>
+                <span class="ciclo-work-experience1">Forca</span>
             </div>
 
-            <div id="project1">
-                <h3>Job position. Click to edit</h3>
-                <h4>2010 - present</h4>
+            <div class="project1">
+                <h3>Jogo da Forca</h3>
+                <h4>2018 - UVV</h4>
                 <br/>
-                <p>I'm a Paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me                      and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you                      like on your page. I’m a great place for you to write more. Tell a story about yourself.and you can start adding your                   own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great                     place for you to write more. Tell a story about yourself.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar convallis mauris, id posuere nulla interdum eu. Donec id nulla libero. Pellentesque ac tellus id quam blandit dictum vel quis nulla. Aenean non justo sit amet justo tristique fermentum. Nulla nec mauris vel mi suscipit rhoncus vitae sit amet quam. Mauris a enim lorem. Nulla suscipit lacus velit, quis ultrices elit rutrum id.
                 </p>
 
             </div>
-
+        </a>
         </div>
         <hr>
-    </div>
+
+        <div class="work-experience"><a href="jokenpo/index.html" target="_blank" >
+            <div class="ciclo-project">
+                <span class="ciclo-work-experience1">Jokenpo</span>
+            </div>
+
+            <div class="project1">
+                <h3>Pedra/Papel/Tesoura</h3>
+                <h4>2018 - UVV</h4>
+                <br/>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar convallis mauris, id posuere nulla interdum eu. Donec id nulla libero. Pellentesque ac tellus id quam blandit dictum vel quis nulla. Aenean non justo sit amet justo tristique fermentum. Nulla nec mauris vel mi suscipit rhoncus vitae sit amet quam. Mauris a enim lorem. Nulla suscipit lacus velit, quis ultrices elit rutrum id.
+                </p>
+            </div>
+
+        </div>
+
+
+
+        <hr>
 
 
 </article>
