--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div id="sobre-autor">
-        <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you             can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your                page. I’m a great place for you to write more. Tell a story and let your users get to know you.
+        <p>Pellentesque eu rhoncus quam. Nam lacinia elit vel nisi blandit fermentum. Vivamus scelerisque massa diam, a tristique nisi ultricies id. Phasellus maximus ac orci at sodales. Nam finibus nibh ut libero dictum molestie. Donec vel ullamcorper ex. Morbi vestibulum egestas ipsum. Ut pharetra eros a consequat iaculis. Praesent tincidunt scelerisque imperdiet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ante magna, mollis dignissim lacinia et, pharetra nec ex
         </p>
     </div>
 
