--- a/resume.html
+++ b/resume.html
@@ -11,13 +11,13 @@
     <header>
         <div id="cabecalho">
             <div id="titulo">
-                <h1>Rafael Castanheira</h1>
+                <h1>Rafael Castanheira / Phillipe Spindula</h1>
                 <h4>Web Developer</h4>
             </div>
             <nav>
                 <div id="menu">
                     <ul >
-                        <li><a href="index.html"><b>Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="resume.html">Resume</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="#">Contact</b></a></li>
@@ -42,11 +42,7 @@
             </div>
 
             <div id="work-texto1">
-                <h3>Job position. Click to edit</h3>
-                <h4>2010 - present</h4>
-                <br/>
-                <p>​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me                      and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you                      like on your page. I’m a great place for you to write more. Tell a story about yourself.
-                </p>
+
 
             </div>
 
@@ -58,12 +54,11 @@
 
     <div id="work-experience2">
         <div id="work-texto2">
-            <h3>Job position. Click to edit</h3>
-            <h4>2010 - present</h4>
+            <h3>Job position. Etiam a libero laoreet</h3>
+            <h4>2017 - present</h4>
             <br/>
-            <p>​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me                      and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you                      like on your page. I’m a great place for you to write more. Tell a story about yourself.
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a libero laoreet, consectetur nulla ut, vulputate magna. Integer id est aliquam, aliquet felis eget, venenatis justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla iaculis magna eu magna blandit pulvinar. Ut iaculis elementum neque sed lobortis. Morbi convallis risus sit amet sapien porttitor, nec consequat magna varius. Suspendisse condimentum enim a nunc vulputate laoreet.
             </p>
-
         </div>
         <br/>
         <hr>
@@ -75,10 +70,10 @@
         </div>
 
         <div id="education-texto">
-            <h3>University name. Click to edit</h3>
-            <h4>2010 - present</h4>
+            <h3>University name</h3>
+            <h4>2018 - present</h4>
             <br/>
-            <p>​​I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and                 you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on                  your page. I’m a great place for you to write more. Tell a story about yourself.
+            <p>​​Phasellus vestibulum mollis neque, ac posuere risus malesuada non. Cras varius nec eros non aliquet. Morbi imperdiet lectus vel nisi iaculis malesuada. Duis eu vestibulum magna, vel rhoncus eros. Proin placerat in arcu nec dapibus. Curabitur dictum ipsum a bibendum sagittis. Proin sagittis venenatis tincidunt. Quisque cursus lorem arcu, venenatis bibendum felis tempor non. Duis nec velit neque.
             </p>
         </div>
     </div>
