--- a/canvas/jogo.html
+++ b/canvas/jogo.html
@@ -8,6 +8,8 @@
 <body>
 <div id="container">
     <div id="containerJogo">
+        <div id="pontuacao"></div>
+        <div id="msg"></div>
         <canvas id="game" width = "400" height="600"></canvas>
     </div>
 </div>
@@ -23,6 +25,7 @@
     var mapaTecla = new Array();
     var temporizador;
     var estado = 0;
+    var pontos = 0;
 
 
     var tijolos = new Array();
@@ -65,6 +68,7 @@
         var canvas = document.getElementById("game");
         contexto = canvas.getContext("2d");
 
+        hud(pontos);
         jogador.pintar();
         temporizador = setInterval(mainloop,16);
 
@@ -223,10 +227,27 @@
     }//Função que detecta a ocorrencia de colisão Raquete e bola
 
 
+    function hud(pontos) {
+        document.getElementById("pontuacao").innerHTML = "Pontos: "+pontos;
+
+    }
+
     
     function mainloop() {
+        if (estado == 0)
+        {
+            document.getElementById("msg").innerHTML = "Pressione a tecla espaço para começar"
+        }
+        if (estado == 1)
+        {
+            document.getElementById("msg").innerHTML = "Jogo iniciado"
+        }
+        if (estado == 2)
+        {
+            document.getElementById("msg").innerHTML = "Game Over"
+        }
         if (mapaTecla[37] == true && estado == 1){
-            if(jogador.detectarColisaoRaquete() == "esq"){
+            if(jogador.detectarColisaoRaquete() == "esq"){ //Condição de parada com Raquete a esquerda
                 jogador.mover(0);
             }
             else{
@@ -236,7 +257,7 @@
 
         if (mapaTecla[39] == true && estado == 1)
         {
-            if(jogador.detectarColisaoRaquete() == "dir"){
+            if(jogador.detectarColisaoRaquete() == "dir"){//Condição de parada com Raquete a direita
                 jogador.mover(0);
             }
             else{
@@ -256,8 +277,10 @@
         for (t in tijolos){
             if (tijolos[t].detectarColisaoTijoloxBola()){
                 tijolos.splice(t,1);
+                hud(pontos+=1);
                 if (tijolos.length == 0){
                     estado = 3;
+                    document.getElementById("msg").innerHTML = "Game Over"
                 }
             }
         }
