--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
     <hr>
 
 
-    <div class="work-experience"><a href="video/index.html" target="_blank" >
+    <div class="work-experience"><a href="video/" target="_blank" >
         <div class="ciclo-project">
             <span class="ciclo-work-experience1">Video interativo</span>
         </div>
