--- a/game/assets/index.html
+++ b/game/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fist Project</title>
+    <title>First Project</title>
     <script type="text/javascript" src="../assets/phaser.min.js"></script>
     <script type="text/javascript" src="../js/boot.js"></script>
     <script type="text/javascript" src="../js/load.js"></script>
